--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -109,6 +109,7 @@ textarea::placeholder {
   min-height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   gap: 20px;
   padding-bottom: 64px;
   position: relative;
